--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-env": "^7.24.7",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^12.0.2",
+    "crypto-browserify": "^3.12.1",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
     "eslint": "^9.5.0",
